--- a/Test_Task/MainWindow.xaml
+++ b/Test_Task/MainWindow.xaml
@@ -11,15 +11,15 @@
             <Label Margin="5" FontWeight="Bold" FontSize="16">Calculate sum of all future interest payments</Label>
             <StackPanel Margin="5" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Margin="5">Investment Amount</Label>
-                <TextBox x:Name="x_invest" Text="{Binding X_Invest}" Width="100"/>
+                <TextBox x:Name="x_invest" Text="{Binding X_Invest, Mode=OneWayToSource}" Width="100"/>
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Margin="5">R% annual return</Label>
-                <TextBox x:Name="r_return" Text="{Binding R_AnnualReturn}" Width="100"/>
+                <TextBox x:Name="r_return" Text="{Binding R_AnnualReturn, Mode=OneWayToSource}" Width="100"/>
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Margin="5">N years</Label>
-                <TextBox x:Name="n_years" Text="{Binding N_Years}" Width="100"/>
+                <TextBox x:Name="n_years" Text="{Binding N_Years, Mode=OneWayToSource}" Width="100"/>
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Margin="5">Agreement Date</Label>
